[tool.poetry]
name = "ahio"
version = "1.0.28"
description = "I/O Communication Library"
authors = ["Álan Crístoffer <acristoffers@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/acristoffers/ahio"
keywords = ["data acquisition", "I/O", "hardware communication"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pyserial = "^3.5"
python-snap7 = "^1.1"
pymodbus3 = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
