[tool.poetry]
name = "ahio"
version = "1.0.33"
description = "I/O Communication Library"
authors = ["Álan Crístoffer <acristoffers@startmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/acristoffers/ahio"
keywords = ["data acquisition", "I/O", "hardware communication"]

[tool.poetry.dependencies]
pymodbus = "^3.0.0"
pyserial = "^3.5"
python = ">=3.8,<3.12"
python-snap7 = "^1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
