[project]
name = "ahio"
version = "1.0.35"
description = "I/O Communication Library"
authors = [{ name = "Álan Crístoffer", email = "acristoffers@startmail.com" }]
requires-python = ">=3.8,<3.15"
readme = "README.md"
license = "MIT"
keywords = [
    "data acquisition",
    "I/O",
    "hardware communication",
]
dependencies = [
    "pymodbus>=3.0.0,<4",
    "pyserial~=3.5",
    "python-snap7~=1.3",
]

[project.urls]
Repository = "https://github.com/acristoffers/ahio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
